tests/invalid/XOR_Invalid_1.whiley
method main() -> int:
    int crc = 4294967295
    return crc ^ 11010101b
